--- a/index.html
+++ b/index.html
@@ -9,19 +9,49 @@
 <body>
     <div class="main-container">
         <div id="sidebar">
-            <h1>Dashboard</h1>
+            <div class="icons">
+                <img src="icons/view-dashboard.svg">
+                <h1>Dashboard</h1>
+            </div>
             <div class="side-navigation">
-                <p>Home</p>
-                <p>Profile</p>
-                <p>Messages</p>
-                <p>History</p>
-                <p>Tasks</p>
-                <p>Communities</p>
+                <div class="icons">
+                    <img src="icons/home.svg">
+                    <p>Home</p>
+                </div>
+                <div class="icons">
+                    <img src="icons/account.svg">
+                    <p>Profile</p>
+                </div>
+                <div class="icons">
+                    <img src="icons/message.svg">
+                    <p>Messages</p>
+                </div>
+                <div class="icons">
+                    <img src="icons/clock-time-three.svg">
+                    <p>History</p>
+                </div>
+                <div class="icons">
+                    <img src="icons/file-multiple.svg">
+                    <p>Tasks</p>
+                </div>
+                <div class="icons">
+                    <img src="icons/account-group.svg">
+                    <p>Communities</p>
+                </div>
             </div>
             <div class="side-extra">
-                <p>Settings</p>
-                <p>Support </p>
-                <p>Privacy</p>
+                <div class="icons">
+                    <img src="icons/cog.svg">
+                    <p>Settings</p>
+                </div>
+                <div class="icons">
+                    <img src="icons/help.svg">
+                    <p>Support</p>
+                </div>
+                <div class="icons">
+                    <img src="icons/shield-check.svg">
+                    <p>Privacy</p>
+                </div>
             </div>
         </div>
     </div>
