Adds search bar to header

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 </div>
             </div>
         </div>
+        <header>
+            <div class="search-bar">
+                <img src="icons/magnify.svg">
+                <input type="text">
+            </div>
+        </header>
     </div>
 </body>
 </html>
