--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
                 <img src="icons/magnify.svg">
                 <input type="text">
             </div>
+            <div class="right-profile">
+                <img src="icons/bell-ring-outline.svg">
+                <img id="right-pfp" src="icons/Png.png" alt="">
+                <p>Morgan Oakley</p>
+            </div>
+            <div class="bottom-profile">
+                <img src="icons/Png.png" alt="">
+                <p><span>Hi there,</span><br>Morgan Oakley (@morgan)</p>
+            </div>
+            <div class="header-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </header>
     </div>
 </body>
