Changes main container grid layout

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                 <button>Share</button>
             </div>
         </header>
+        <div class="main-content">
+            
+        </div>
     </div>
 </body>
 </html>
