--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             </div>
             <div class="right-profile">
                 <img src="icons/bell-ring-outline.svg">
-                <img id="right-pfp" src="icons/Png.png" alt="">
+                <img class="right-pfp" src="profile-pictures/cat.png" alt="">
                 <p>Morgan Oakley</p>
             </div>
             <div class="bottom-profile">
-                <img src="icons/Png.png" alt="">
+                <img src="profile-pictures/cat.png" alt="">
                 <p><span>Hi there,</span><br>Morgan Oakley (@morgan)</p>
             </div>
             <div class="header-buttons">
@@ -134,7 +134,46 @@
                         <img src="icons/source-fork.svg" alt="">
                     </div>
                 </div>
-                
+            </div>
+            <div class="third-section">
+                <h2>Announcements</h2>
+                <div class="small-box">
+                    <h3>Site Maintenance</h3>
+                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+
+                    <div class="row-border"></div>
+
+                    <h3>Community Share Day</h3>
+                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+
+                    <div class="row-border"></div>
+
+                    <h3>Updated Privacy Policy</h3>
+                    <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                </div>
+                <h2>Trending</h2>
+                <div class="small-box-two">
+                    <div class="profiles">
+                        <img class="trending-pfp" src="profile-pictures/cat2.jpg" alt="">
+                        <h3>@tegan</h3>
+                        <p>World Peace Builder</p>
+                    </div>
+                    <div class="profiles">
+                        <img class="trending-pfp" src="profile-pictures/cat3.jpeg" alt="">
+                        <h3>@Morgan</h3>
+                        <p>Super Cool Project</p>
+                    </div>
+                    <div class="profiles">
+                        <img class="trending-pfp" src="profile-pictures/cat4.png" alt="">
+                        <h3>@kendall</h3>
+                        <p>Life Changing App</p>
+                    </div>
+                    <div class="profiles">
+                        <img class="trending-pfp" src="profile-pictures/cat5.png" alt="">
+                        <h3>@alex</h3>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
