Minor change to sidebar
*increases width of sidebar
*adds point cursor to some elements

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <input type="text">
             </div>
             <div class="right-profile">
-                <img src="icons/bell-ring-outline.svg">
+                <img class="bell" src="icons/bell-ring-outline.svg">
                 <img class="right-pfp" src="profile-pictures/cat.png" alt="">
                 <p>Morgan Oakley</p>
             </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="profiles">
                         <img class="trending-pfp" src="profile-pictures/cat3.jpeg" alt="">
-                        <h3>@Morgan</h3>
+                        <h3>@Jacob</h3>
                         <p>Super Cool Project</p>
                     </div>
                     <div class="profiles">
